Click on iphone bugfix

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+    touch-action: auto;
+}
+
 /* ------- Header ------- */
 
 .navbar-dark .navbar-nav .nav-link:hover {
